--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,8 +1,11 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
-<a href="https://www.youtube.com/channel/UCGZBG6dhEIZBMIcaxqJukFg">my youtube channel</a>
-<a href="https://dbshorts.github.io/">my website</a>
-<a href="https://scratch.mit.edu/users/NAnd_DProductions17/">my scratch account</a>
-
+<a href="https://www.youtube.com/channel/UCGZBG6dhEIZBMIcaxqJukFg">YouTube Shorts</a>
+<a href="https://www.youtube.com/channel/UCe0DXKkQMU5cCnH2YTvysaQ">YouTube</a>
+<a href="https://dbshorts.github.io/">Website</a>
+<a href="https://scratch.mit.edu/users/NAnd_DProductions17/">Scratch</a>
+<a href="https://www.twitch.tv/dbshorts">Twitch</a>
+<a href="https://twitter.com/DB_Shorts08">Twitter</a>
+<a href="https://dbshorts.github.io/damians-dandy-discord.html">Discord Server</a>
 <!-- Setup theme-color -->
 {% include head-custom-theme-colors.html %}
 
