--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -6,6 +6,8 @@
 <a href="https://www.twitch.tv/dbshorts">Twitch</a>
 <a href="https://twitter.com/DB_Shorts08">Twitter</a>
 <a href="https://dbshorts.github.io/damians-dandy-discord.html">Discord Server</a>
+<a href="https://www.twitch.tv/nanddproductions">N&D Twitch</a>
+<a href="https://www.youtube.com/channel/UCXm-Xgt4hMRfjH9o00uj7jA">N&D YouTube</a>
 <!-- Setup theme-color -->
 {% include head-custom-theme-colors.html %}
 
