--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,13 @@ layout: default
   </header>
 
   <div class="share-links">
-    {% include sharelinks.html %}
+    <script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="url"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+    </script>
   </div>
 
   <div class="post-content e-content" itemprop="articleBody">
