--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -8,6 +8,13 @@
 <a href="https://dbshorts.github.io/damians-dandy-discord.html">Discord Server</a>
 <a href="https://www.twitch.tv/nanddproductions">N&D Twitch</a>
 <a href="https://www.youtube.com/channel/UCXm-Xgt4hMRfjH9o00uj7jA">N&D YouTube</a>
+<script src="https://utteranc.es/client.js"
+        repo="[ENTER REPO HERE]"
+        issue-term="url"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+</script>
 <!-- Setup theme-color -->
 {% include head-custom-theme-colors.html %}
 
