--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,7 +9,7 @@
 <a href="https://www.twitch.tv/nanddproductions">N&D Twitch</a>
 <a href="https://www.youtube.com/channel/UCXm-Xgt4hMRfjH9o00uj7jA">N&D YouTube</a>
 <script src="https://utteranc.es/client.js"
-        repo="[ENTER REPO HERE]"
+        repo="https://github.com/DBShorts/damians-blog"
         issue-term="url"
         theme="github-dark"
         crossorigin="anonymous"
