--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -16,5 +16,5 @@
 {% include head-custom-google-analytics.html %}
 
 <!-- You can set your favicon here -->
-<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 <!-- end custom head snippets -->
