--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -9,6 +9,7 @@
 <a href="https://www.twitch.tv/nanddproductions">N&D Twitch</a>
 <a href="https://www.youtube.com/channel/UCXm-Xgt4hMRfjH9o00uj7jA">N&D YouTube</a>
 <a href="https://www.facebook.com/groups/327218335972908">Damian's Facebook Group</a>
+<a href="https://www.guilded.gg/i/EmzMZBZ2">Guilded Server</a>
 <!-- Setup theme-color -->
 {% include head-custom-theme-colors.html %}
 
