--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -12,7 +12,9 @@
 <a href="https://www.guilded.gg/i/EmzMZBZ2"><img src="https://dbshorts.github.io/damians-blog/icons/guilded.png" alt="Guilded Server"></a>
 <input id="clickMe" type="button" value="Invert Colors (Light Theme)" onclick="Invert();" />
 <script>
-javascript:(()=>{const s=document.documentElement.style;s.backgroundColor='black';s.filter='invert(100%)';})();void 0;
+  function Invert() {
+    javascript:(()=>{const s=document.documentElement.style;s.backgroundColor='black';s.filter='invert(100%)';})();void 0;
+  }
 </script>
 <!-- Setup theme-color -->
 {% include head-custom-theme-colors.html %}
