--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,5 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
-<link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="shortcut icon" type="image/svg+xml" href="favicon.svg">
 <a href="https://www.youtube.com/channel/UCGZBG6dhEIZBMIcaxqJukFg"><img src="https://dbshorts.github.io/damians-blog/icons/youtubeshorts.png" alt="Youtube Shorts"></a>
 <a href="https://www.youtube.com/channel/UCe0DXKkQMU5cCnH2YTvysaQ"><img src="https://dbshorts.github.io/damians-blog/icons/youtube.png" alt="YouTube"></a>
 <a href="https://dbshorts.github.io/"><img src="https://dbshorts.github.io/damians-blog/icons/website.png" alt="Website"></a>
