--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,16 +1,6 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 <link rel="shortcut icon" type="image/svg+xml" href="favicon.svg">
-<a href="https://www.youtube.com/channel/UCGZBG6dhEIZBMIcaxqJukFg"><img src="https://dbshorts.github.io/damians-blog/icons/youtubeshorts.png" alt="Youtube Shorts"></a>
-<a href="https://www.youtube.com/channel/UCe0DXKkQMU5cCnH2YTvysaQ"><img src="https://dbshorts.github.io/damians-blog/icons/youtube.png" alt="YouTube"></a>
-<a href="https://dbshorts.github.io/"><img src="https://dbshorts.github.io/damians-blog/icons/website.png" alt="Website"></a>
-<a href="https://scratch.mit.edu/users/NAnd_DProductions17/"><img src="https://dbshorts.github.io/damians-blog/icons/scratch.png" alt="Scratch"></a>
-<a href="https://www.twitch.tv/dbshorts"><img src="https://dbshorts.github.io/damians-blog/icons/twitch.png" alt="Twitch"></a>
-<a href="https://twitter.com/DB_Shorts08"><img src="https://dbshorts.github.io/damians-blog/icons/twitter.png" alt="Twitter"></a>
-<a href="https://dbshorts.github.io/damians-dandy-discord.html"><img src="https://dbshorts.github.io/damians-blog/icons/discord.png" alt="Discord Server"></a>
-<a href="https://www.twitch.tv/nanddproductions"><img src="https://dbshorts.github.io/damians-blog/icons/twitchNandD.png" alt="N And D Twitch"></a>
-<a href="https://www.youtube.com/channel/UCXm-Xgt4hMRfjH9o00uj7jA"><img src="https://dbshorts.github.io/damians-blog/icons/youtubeNandD.png" alt="N And D YouTube"></a>
-<a href="https://www.facebook.com/groups/327218335972908"><img src="https://dbshorts.github.io/damians-blog/icons/facebook.png" alt="Facebook Group"></a>
-<a href="https://www.guilded.gg/i/EmzMZBZ2"><img src="https://dbshorts.github.io/damians-blog/icons/guilded.png" alt="Guilded Server"></a>
+<a href="https://linktr.ee/dbshorts"><button type="button">My Linktree!</button></a>
 <input id="clickMe" type="button" value="Light (Inverted) Theme" onclick="Invert();" />
 <input id="clickMe" type="button" value="Dark Theme" onclick="Revert();" />
 <script>
