--- a/css/override.css
+++ b/css/override.css
@@ -43,3 +43,7 @@ hr {
   font-size: 2.5em;
   opacity: 0.3;
 }
+
+body, h1, h2, h3, h4, h5, .site-title, .site-nav {
+  font-family: 'Press Start 2P', sans-serif;
+}
