help 😭 i suck at jekyll

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,6 +1,7 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 <link rel="shortcut icon" type="image/svg+xml" href="favicon.svg">
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press%20Start%202P">
+<link rel="stylesheet" href="{{ site.baseurl }}/css/override.css" />
 <a href="https://linktr.ee/dbshorts"><button type="button">My Linktree!</button></a>
 <input id="clickMe" type="button" value="Light (Inverted) Theme" onclick="Invert();" />
 <input id="clickMe" type="button" value="Dark Theme" onclick="Revert();" />
