--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-<link href="/css/override.css" rel="stylesheet" type="text/css">
+
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press%20Start%202P">
+<link rel="stylesheet" href="{{ site.baseurl }}/css/override.css" />
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 <link rel="shortcut icon" type="image/png" href="favicon.png">
   <header class="post-header">
