--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
  <link rel="shortcut icon" type="image/png" href="favicon.png">
 <div class="home">
   {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
+    <h1 class="page-heading" style="font-family: 'Press Start 2P', sans-serif;">{{ page.title }}</h1>
   {%- endif -%}
 
   {{ content }}
