--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
- <link rel="shortcut icon" type="image/png" href="favicon.png">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press%20Start%202P">
+<link rel="stylesheet" href="{{ site.baseurl }}/css/override.css" />
 <div class="home">
   {%- if page.title -%}
     <h1 class="page-heading" style="font-family: 'Press Start 2P', sans-serif;">{{ page.title }}</h1>
