--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,9 +4,7 @@ layout: default
 <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Press%20Start%202P">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/override.css" />
 <div class="home">
-  {%- if page.title -%}
-    <h1>{{ page.title }}</h1>
-  {%- endif -%}
+  <h1>damians funni blog</h1>
 
   {{ content }}
 
