comments test lol

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,14 @@ layout: default
     {{ content }}
     {% include navlinks.html %}
   </div>
+  <script src="https://utteranc.es/client.js"
+        repo="DBShorts/damians-blog"
+        issue-term="pathname"
+        label="Comment💬"
+        theme="github-dark"
+        crossorigin="anonymous"
+        async>
+  </script>
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
