--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -5,6 +5,9 @@
 <a href="https://linktr.ee/dbshorts"><button type="button">My Linktree!</button></a>
 <input id="clickMe" type="button" value="Light (Inverted) Theme" onclick="Invert();" />
 <input id="clickMe" type="button" value="Dark Theme" onclick="Revert();" />
+<!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=8088973&style=0049&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
 <script>
   function Invert() {
     javascript:(()=>{const s=document.documentElement.style;s.backgroundColor='black';s.filter='invert(100%)';})();void 0;
