--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -7,7 +7,7 @@
 <input id="clickMe" type="button" value="Dark Theme" onclick="Revert();" />
 <!-- hitwebcounter Code START -->
 <a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=8088973&style=0049&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>                                    
+<img src="https://hitwebcounter.com/counter/counter.php?page=8088973&style=0049&nbdigits=9&type=page&initCount=0" title="Free Counter" Alt="web counter (if you see this text an ad blocker may be causing issues)"   border="0" /></a>                                    
 <script>
   function Invert() {
     javascript:(()=>{const s=document.documentElement.style;s.backgroundColor='black';s.filter='invert(100%)';})();void 0;
